Added Task Adapter for tasks in recycler view

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph.xml">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph.xml"
+    app:startDestination="@id/taskFragment">
 
+    <fragment
+        android:id="@+id/taskFragment"
+        android:name="com.example.sampletodo.task.TaskFragment"
+        android:label="TaskFragment"
+        tools:context = "com.example.sampletodo.task.TaskFragment"/>
 </navigation>
