--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -6,34 +6,50 @@
         <variable
             name="task"
             type="com.example.sampletodo.data.Task" />
+
+        <variable
+            name="viewModel"
+            type="com.example.sampletodo.task.TaskViewModel" />
+
+        <import type="android.view.View"/>
+
+        <import type="android.widget.CompoundButton"/>
     </data>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/card_default_padding"
         android:layout_margin="@dimen/cardview_default_margin"
     >
+        <View
+            android:id="@+id/task_background"
+            android:layout_width="wrap_content"
+            android:layout_height="4dp"
+            tools:background="@color/orange"
+            />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="@dimen/card_default_padding">
 
-            <androidx.appcompat.widget.AppCompatCheckBox
-                android:checked="@{task.taskProgress}"
+            <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="@{task.taskProgress}"
+                android:onClick="@{(view) -> viewModel.setCheckBox(((CompoundButton)view).isChecked(), task)}"
                 />
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_size_small"
-                android:text="@{task.taskName}"
-                android:textColor="@color/black"/>
+                style="@style/TextAppearance.AppCompat.Medium"
+                android:textStyle="bold"
+                tools:text="@string/app_name"
+                android:text="@{task.taskName}" />
 
         </LinearLayout>
 
