--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="text_size_small">18sp</dimen>
     <dimen name="card_default_padding">10dp</dimen>
     <dimen name="cardview_default_margin">8dp</dimen>
+    <dimen name="fab_default_margin">16dp</dimen>
 </resources>
